--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Singularity
 email: vishnoishivoditraj@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   An account of things I find interesting. 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: https://shivodit.github.io/auto_blog # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: /auto_blog # the subpath of your site, e.g. /blog
+url: https://shivodit.github.io/auto_blog/ # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  shivodit
 
 # Build settings
